Stub out key_replays() and cleanup has_replay_section from template

--- a/src/sentry/templates/sentry/emails/reports/body.html
+++ b/src/sentry/templates/sentry/emails/reports/body.html
@@ -534,7 +534,7 @@
   </div>
   {% endif %}
 
-  {% if has_replay_section and key_replays|length > 0 %}
+  {% if key_replays|length > 0 %}
   <div id="key-replays">
     <h4>Most erroneous replays</h4>
     {% for a in key_replays %}
