--- a/static/less/shared-components.less
+++ b/static/less/shared-components.less
@@ -306,7 +306,7 @@ table.table.key-value {
     width: 175px;
     max-width: 175px;
     word-wrap: break-word;
-    padding: 10px 15px 10px 0 !important;
+    padding: 10px 15px 10px 10px !important;
     line-height: 1.4 !important;
   }
 }
