--- a/src/sentry/templates/sentry/403-csrf-failure.html
+++ b/src/sentry/templates/sentry/403-csrf-failure.html
@@ -60,6 +60,7 @@
            */
           const forceRefreshPage = () => {
             setTimeout(() => {
+              // NOTE: window.location.reload(true) does not work on Chrome
               window.location.replace(window.location.href)
             }, 500);
           };
