--- a/src/sentry/templates/sentry/403-csrf-failure.html
+++ b/src/sentry/templates/sentry/403-csrf-failure.html
@@ -21,9 +21,9 @@
             <span id="csrf-status" style="margin-left: 10px;"></span>
         </div>
 
-        <p>{% trans "Why are you encounting a CSRF error after login?" %}</p>
+        <p>{% trans "Why are you encountering a CSRF error after login?" %}</p>
         <ul>
-          <li>See explanation from <a href="https://docs.djangoproject.com/en/5.2/ref/csrf/#why-might-a-user-encounter-a-csrf-validation-failure-after-logging-in" _target="blank">Django docs</a></li>
+          <li>See explanation from <a href="https://docs.djangoproject.com/en/5.2/ref/csrf/#why-might-a-user-encounter-a-csrf-validation-failure-after-logging-in" target="_blank">Django docs</a></li>
         </ul>
 
         <p>{% trans "If you're continually seeing this issue, try the following steps:" %}</p>
