--- a/src/sentry/templates/sentry/403-csrf-failure.html
+++ b/src/sentry/templates/sentry/403-csrf-failure.html
@@ -24,7 +24,7 @@
         <p>{% trans "Why are you encountering a CSRF error after login?" %}</p>
         <ul>
           <li>See explanation from <a href="https://docs.djangoproject.com/en/5.2/ref/csrf/#why-might-a-user-encounter-a-csrf-validation-failure-after-logging-in" target="_blank">Django docs</a>.</li>
-          <li>Read more about <a href="http://en.wikipedia.org/wiki/Cross-site_request_forgery">CSRF on Wikipedia</a>.</li>
+          <li>Read more about <a href="https://en.wikipedia.org/wiki/Cross-site_request_forgery">CSRF on Wikipedia</a>.</li>
         </ul>
 
         <p>{% trans "If you're continually seeing this issue, try the following steps:" %}</p>
