--- a/static/less/shared-components.less
+++ b/static/less/shared-components.less
@@ -537,6 +537,27 @@ table.table.key-value {
   }
 }
 
+.loading.splash {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+
+  .loading-indicator {
+    height: 256px;
+    width: 256px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    animation: none;
+    border: 0;
+    overflow: hidden;
+    border-radius: 0;
+  }
+}
+
 .theme-dark .loading.triangle .loading-indicator {
   filter: invert(100%);
   opacity: 0.8;
