--- a/static/less/shared-components.less
+++ b/static/less/shared-components.less
@@ -562,6 +562,22 @@ table.table.key-value {
     font-family: @font-family-code;
   }
 }
+.loading.splash code {
+  margin: 0;
+  padding: 0;
+  border: none;
+  padding-inline: 0.3ch;
+  margin-inline: -0.15ch;
+  border-radius: 2px;
+  text-box-edge: text text;
+  text-box-trim: trim-both;
+
+  color: #C8007E;
+  background: color-mix(in oklab, currentColor, transparent 92%);
+}
+.theme-dark .loading.splash code {
+  color: #EA95B9;
+}
 .loading.splash small {
   color: #6A6772;
 }
