ref(ui2): support html in loading_message

--- a/src/sentry/templates/sentry/partial/loader.html
+++ b/src/sentry/templates/sentry/partial/loader.html
@@ -79,7 +79,7 @@
   </div>
 
   <div class="loading-message">
-    <p>Loading a <scraps-grawlix>&#%!</scraps-grawlix>-ton of JavaScript&hellip;</p>
+    <p>Loading a <scraps-bleep>&#%!</scraps-bleep>-ton of JavaScript&hellip;</p>
     <p><small>You may need to disable adblocking extensions to load Sentry.</small></p>
     <script>
       function randomFrom(arr) {
@@ -88,7 +88,7 @@
       function randomBetween(min, max) {
         return Math.floor(Math.random() * (max - min - 1) + min);
       }
-      customElements.define('scraps-grawlix', class extends HTMLElement {
+      customElements.define('scraps-bleep', class extends HTMLElement {
         constructor() {
           super();
           this.shapes = '◆●▴▪×'.split('');
