ref(ui2): use loading_message in ui2

--- a/src/sentry/templates/sentry/partial/loader.html
+++ b/src/sentry/templates/sentry/partial/loader.html
@@ -79,7 +79,7 @@
   </div>
 
   <div class="loading-message">
-    <p>Loading a <scraps-bleep>&#%!</scraps-bleep>-ton of JavaScript&hellip;</p>
+    <p>{% loading_message %}</p>
     <p><small>You may need to disable adblocking extensions to load Sentry.</small></p>
     <script>
       function randomFrom(arr) {
