ref(loader): fix response logic (#102094)
I accidentally merged some broken response logic in #102045.

This fixes it!

--- a/static/index.ejs
+++ b/static/index.ejs
@@ -20,7 +20,7 @@
       async function applySpaTheme() {
         const res = await fetch(BOOTSTRAP_URL);
         if (res.ok) {
-          const data = await res.then(res => res.json());
+          const data = await res.json();
           const theme = data.user?.options?.theme;
           if (theme) {
             document.body.classList.replace('theme-system', `theme-${theme}`);
