--- a/static/less/shared-components.less
+++ b/static/less/shared-components.less
@@ -439,8 +439,8 @@ table.table.key-value {
 }
 
 .theme-dark .loading .loading-indicator {
-  // theme.surface200
-  background: #1A141F;
+  // theme.tokens.background.primary
+  background: #241D2A;
 }
 
 @-webkit-keyframes loading {
