fix(ui2): global text color

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -37,14 +37,14 @@ body.theme-dark {
   // theme.tokens.background.primary
   background: #241D2A;
   // theme.tokens.content.primary
-  color: #D6D0DC;
+  color: #F6F5FA;
 }
 body.theme-system {
   @media (prefers-color-scheme: dark) {
     // theme.tokens.background.primary
     background: #241D2A;
     // theme.content.primary
-    color: #D6D0DC;
+    color: #F6F5FA;
   }
 }
 
