ref(loader): .loading.splash -> .splash-loader

--- a/src/sentry/templates/sentry/partial/loader.html
+++ b/src/sentry/templates/sentry/partial/loader.html
@@ -1,7 +1,7 @@
 {% load sentry_assets sentry_helpers %}
 
 {% if prefers_chonk_ui %}
-<div class="loading splash">
+<div class="splash-loader">
   <div class="loading-mask"></div>
 
   <div class="loading-indicator" data-test-id="loading-indicator">
