--- a/static/index.ejs
+++ b/static/index.ejs
@@ -44,7 +44,7 @@
     <% } %>
 
     <div id="blk_router">
-      <div class="loading splash">
+      <div class="splash-loader">
         <div class="loading-mask"></div>
         <div class="loading-indicator" data-test-id="loading-indicator">
             <svg width="400" height="400" viewBox="0 0 400 400" fill="none" xmlns="http://www.w3.org/2000/svg">
