--- a/static/less/shared-components.less
+++ b/static/less/shared-components.less
@@ -538,7 +538,7 @@ table.table.key-value {
 }
 
 // UI2 loader
-.loading.splash {
+.splash-loader {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -562,7 +562,7 @@ table.table.key-value {
     font-family: @font-family-code;
   }
 }
-.loading.splash code {
+.splash-loader code {
   margin: 0;
   padding: 0;
   border: none;
@@ -575,13 +575,13 @@ table.table.key-value {
   color: #C8007E;
   background: color-mix(in oklab, currentColor, transparent 92%);
 }
-.theme-dark .loading.splash code {
+.theme-dark .splash-loader code {
   color: #EA95B9;
 }
-.loading.splash small {
+.splash-loader small {
   color: #6A6772;
 }
-.theme-dark .loading.splash small {
+.theme-dark .splash-loader small {
   color: #B5B0BD;
 }
 
